<resources>
    <string name="app_name">BantayStocks</string>
</resources>
